# protonmail

./: CLAUDE.md  README.md  pyproject.toml
src/protonmail/: __init__.py  main.py
tests/: test_main.py
