[project]
name = "protonmail"
version = "0.1.0"
description = "ProtonMail email sync via Bridge"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
protonmail = "protonmail.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/protonmail"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]

[tool.ruff.lint.isort]
known-first-party = ["protonmail"]
